--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.2.12",
-    "semantic-ui-react": "^0.73.0"
+    "semantic-ui-react": "^0.73.0",
+    "uuid": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
