--- a/server/package.json
+++ b/server/package.json
@@ -21,5 +21,8 @@
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "4.1.1"
+  },
+  "engines": {
+    "node": "6.10.2"
   }
 }
