--- a/server/package.json
+++ b/server/package.json
@@ -12,15 +12,15 @@
   "author": "David Harris",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.17.1",
+    "body-parser": "^1.19.0",
+    "clone": "^2.1.1",
     "cors": "^2.8.3",
     "dotenv": "^4.0.0",
-    "express": "^4.15.2",
-    "clone": "^2.1.1",
-    "redux": "^3.7.2",
+    "express": "^4.17.1",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
-    "react-router-dom": "4.1.1"
+    "react-router-dom": "4.1.1",
+    "redux": "^3.7.2"
   },
   "engines": {
     "node": "6.10.2"
