--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@testing-library/dom": "^6.11.0",
+    "@testing-library/react": "^9.4.0",
+    "@testing-library/user-event": "^8.0.4",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.9.0",
@@ -33,6 +36,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.17.0",
+    "jest": "^25.1.0",
     "prettier": "^1.19.1",
     "prettier-eslint": "^9.0.1"
   },
