--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.2.1",
+    "styled-components": "^5.2.1",
     "uuid": "^8.3.2"
   },
   "scripts": {
