--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "react-redux": "^7.2.2",
     "react-router": "^6.26.2",
     "react-router-dom": "^6.26.2",
-    "react-scripts": "^5.0.1",
     "react-timestamp": "^6.0.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
@@ -22,15 +21,15 @@
     "uuid": "^8.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "devDependencies": {
     "@testing-library/dom": "^7.29.0",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^7.15.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^7.0.0",
@@ -39,7 +38,9 @@
     "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-react": "^7.21.5",
     "prettier": "^2.2.1",
-    "prettier-eslint": "^12.0.0"
+    "prettier-eslint": "^12.0.0",
+    "sass-embedded": "^1.79.2",
+    "vite": "^5.4.7"
   },
   "browserslist": {
     "production": [
