--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "uuid": "^8.3.2"
   },
   "scripts": {
-    "start": "vite",
+    "dev": "vite",
     "build": "vite build",
     "serve": "vite preview"
   },
