Update packages needed for using the form component of shadcn.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
@@ -13,6 +15,7 @@
     "node-sass": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-no-ssr": "^1.1.0",
     "react-redux": "^7.2.2",
     "react-router": "^6.26.2",
@@ -26,7 +29,9 @@
     "styled-components": "^5.2.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "zod": "^3.23.8",
+    "typescript": "^5.0.4"
   },
   "scripts": {
     "dev": "vite",
