--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "redux-thunk": "^3.1.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.6.2",
     "uuid": "^10.0.0",
-    "zod": "^3.23.8",
-    "typescript": "^5.6.2"
+    "zod": "^3.23.8"
   },
   "scripts": {
     "dev": "vite",
@@ -38,6 +38,10 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/react-redux": "^7.1.34",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.12.0",
