--- a/package.json
+++ b/package.json
@@ -27,15 +27,17 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.6.2",
     "uuid": "^10.0.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "vitest": "^2.1.2"
   },
   "scripts": {
     "dev": "vite",
+    "test": "vitest",
     "build": "vite build",
     "serve": "vite preview"
   },
   "devDependencies": {
-    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.3.11",
