--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "i18next": "^23.16.0",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.6.2",
+    "react-i18next": "^15.0.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.445.0",
     "react": "^18.3.1",
@@ -27,8 +31,8 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.6.2",
     "uuid": "^10.0.0",
-    "zod": "^3.23.8",
-    "vitest": "^2.1.2"
+    "vitest": "^2.1.2",
+    "zod": "^3.23.8"
   },
   "scripts": {
     "dev": "vite",
@@ -42,8 +46,8 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
-    "@types/react-router-dom": "^5.3.3",
     "@types/react-redux": "^7.1.34",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.12.0",
