--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "i18next": "^24.2.0",
     "i18next-browser-languagedetector": "^8.0.2",
     "i18next-http-backend": "^3.0.1",
-    "react-i18next": "^15.2.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-i18next": "^15.2.0",
     "react-no-ssr": "^1.1.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.1",
@@ -41,6 +41,7 @@
     "serve": "vite preview"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
@@ -49,7 +50,6 @@
     "@types/react-redux": "^7.1.34",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
@@ -60,7 +60,7 @@
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "prettier-eslint": "^16.3.0",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.0",
     "vite": "^6.0.5"
   },
   "browserslist": {
