--- a/server/package.json
+++ b/server/package.json
@@ -9,17 +9,17 @@
     "readable",
     "react"
   ],
-  "author": "David Harris",
+  "author": "Petra Vos",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.3",
+    "body-parser": "^2.2.1",
     "clone": "^2.1.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.1",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "react-redux": "^9.2.0",
-    "react-router": "^7.1.1",
-    "react-router-dom": "7.1.1",
+    "react-router": "^7.9.6",
+    "react-router-dom": "7.9.6",
     "redux": "^5.0.1"
   },
   "engines": {
